--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,7 @@
-.app {
+.base {
     text-size-adjust: none;
     font-family: helvetica, arial, sans-serif;
     line-height: 200%;
+    color: red;
     padding: 6px 20px 30px;
 }
