--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -24,5 +24,5 @@
     align-items: center;
 
     background: url(../assets/GAME_OVER.png) no-repeat center;
-    background-size: 50%;
+    background-size: contain;
 }
